--- a/portfolioReact/src/components/navbar/navbar.module.css
+++ b/portfolioReact/src/components/navbar/navbar.module.css
@@ -37,6 +37,7 @@
 }
 
 .menuBtn {
+    display: none;
     width: 40px;
     height: 40px;
 }
@@ -71,6 +72,12 @@
         background: linear-gradient(0deg, rgba(25,55,100,0.2), rgba(25,55,100,1)100%);
         padding: 24px 33px;
         box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
+    }
+
+    .menuOpen {
+        display: flex;
+        z-index: 1;
+
     }
     
 }
