agregados css home

--- a/portfolioReact/src/components/Home/home.module.css
+++ b/portfolioReact/src/components/Home/home.module.css
@@ -33,7 +33,7 @@
 }
 
 .description{
-    font-size: 25px;
+    font-size: 30px;
     font-family: var(--font-roboto);
     margin-bottom: 52px;
     width: 80%;
@@ -48,10 +48,57 @@
     font-weight: 600;
     padding: 27px 26px;
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
+    margin-bottom: 50px;
 }
 
 .homeImg{
-    width: 70%;
+    width: 60%;
     z-index: 1;
    
+    animation-name: float;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+
+}
+
+@keyframes float {
+    0% {
+        transform: translate(0, 0px);
+    }
+
+    50% {
+        transform: translate(0, 10px);
+    }
+
+    100% {
+        transform: translate(0,-0px);
+    }
+}
+
+.topBlur{
+    position: absolute;
+    width: 50vw;
+    height: 50vw;
+    min-width: 350px;
+    min-height: 350px;
+    top: -128px;
+    left: -10vw;
+    border-radius: 764px;
+    background: rgba(25,55,109,0.7);
+    filter: blur(100px);
+    z-index: 0;
+}
+.bottomBlur{
+    position: absolute;
+    width: 70vw;
+    height: 50vw;
+    min-width: 250px;
+    min-height: 350px;
+    top: 246px;
+    right: -25vw;
+    border-radius: 764px;
+    background: rgba(25,55,109,0.7);
+    filter: blur(100px);
+    z-index: 0;
 }
