--- a/portfolioReact/src/components/Home/home.module.css
+++ b/portfolioReact/src/components/Home/home.module.css
@@ -102,3 +102,19 @@
     filter: blur(100px);
     z-index: 0;
 }
+
+
+@media screen and (max-width: 830px) {
+
+    .container{
+        flex-direction: column-reverse;
+    }
+
+    .content {
+        align-items: center;
+    }
+
+    .homeImg {
+        margin-bottom: 25px;
+    }
+}
