--- a/portfolioReact/src/components/Home/home.module.css
+++ b/portfolioReact/src/components/Home/home.module.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     margin-top: 49px;
     z-index: 1;
+    margin-top: 150px;
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -96,7 +97,7 @@
     min-width: 250px;
     min-height: 350px;
     top: 246px;
-    right: -25vw;
+    right: 10vw;
     border-radius: 764px;
     background: rgba(25,55,109,0.7);
     filter: blur(100px);
@@ -108,6 +109,7 @@
 
     .container{
         flex-direction: column-reverse;
+        margin-top: 25px;
     }
 
     .content {
