--- a/portfolioReact/src/components/proyectos/proyectos.module.css
+++ b/portfolioReact/src/components/proyectos/proyectos.module.css
@@ -1,1 +1,88 @@
-@import '../../vars.css'
+@import '../../vars.css';
+
+
+
+.container{
+    margin-top: 76px;
+    color: var(--color-text);
+    margin-left: 10%;
+    margin-right: 10%;
+
+}
+
+.title{
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: 1.75px;
+    text-transform: uppercase;
+}
+
+.projects{
+    margin-top: 35px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;   
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    width: 100%;
+}
+
+.cardContainer {
+    display: flex;
+    flex-direction: column;
+    border-radius: 10px;
+    background: linear-gradient(180deg, #576cbc 0%, #132a53 100%);
+    box-shadow: 0 16px 14px 0 #04152d;
+    padding: 18px 24px;
+    max-width: 345px;
+}
+.img {
+    margin-bottom: 36px;
+    width: 300px;
+    height: auto;
+    border-radius: 15px;
+}
+.cardTitle{
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.description{
+    margin-top: 7px;
+    font-size: 25px;
+    font-weight: 400;
+}
+.skills{
+    width: 100%;
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 5px;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+}
+.skill{
+    font-size: 25px;
+    font-weight: 400;
+    border-radius: 100px;
+    background: var(--color-dark);
+    padding: 2px 22px;
+}
+
+.links{
+    width: 100%;
+    margin-top: 26px;
+    display: flex;
+    justify-content: space-around;
+}
+.link{
+    text-decoration: none;
+    color:var(--color-text);
+    font-size: 15px;
+    border-radius: 100px;
+    background: var(--color-primary);
+    padding: 2px 22px;
+}
