--- a/portfolioReact/src/components/Home/home.module.css
+++ b/portfolioReact/src/components/Home/home.module.css
@@ -40,6 +40,12 @@
     width: 80%;
 }
 
+.links {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 20px;
+}
 .contact{
     text-decoration: none;
     background-color: var(--color-primary);
@@ -49,7 +55,12 @@
     font-weight: 600;
     padding: 27px 26px;
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.25);
-    margin-bottom: 50px;
+    transition: 0.2s;
+    
+}
+
+.contact:hover{
+    background-color: var(--color-secondary);
 }
 
 .homeImg{
@@ -118,5 +129,13 @@
 
     .homeImg {
         margin-bottom: 25px;
+    }
+
+    .links{
+        flex-direction: column;
+    }
+
+    .contact{
+        font-size: 20px;
     }
 }
