--- a/portfolioReact/src/components/contacto/contacto.module.css
+++ b/portfolioReact/src/components/contacto/contacto.module.css
@@ -53,3 +53,20 @@
     font-size: 25px;
     letter-spacing: 1.5px;
 }
+
+@media screen and (max-width: 830px) {
+    .container{
+        flex-direction: column;
+        gap: 23px;
+    }
+
+    .text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .links{
+        align-items: center;
+    }
+}
